[MIG] svelte-migrate routes
Guide de migration \n https://www.netlify.com/blog/migrating-breaking-changes-in-sveltekit

--- a/src/app.html
+++ b/src/app.html
@@ -28,7 +28,7 @@
 
 		%sveltekit.head%
 	</head>
-	<body>
-		<div>%sveltekit.body%</div>
+	<body data-sveltekit-preload-data="tap">
+		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
