--- a/src/app.html
+++ b/src/app.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Boosted w/ Vite</title>
-	%sveltekit.head%
-  </head>
-  <body>
-	%sveltekit.body%
-  </body>
-  
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Boosted w/ Vite</title>
+  %sveltekit.head%
+</head>
+
+<body>
+  <div style="display: contents">%sveltekit.body%</div>
+
+</body>
+
 </html>
