--- a/src/app.html
+++ b/src/app.html
@@ -8,7 +8,7 @@
 		%sveltekit.head%
 	</head>
 
-	<body>
+	<body class="p-0">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
